# rectified-lp-jepa

./: .gitignore  IDEA.md  README.md  SPLIT_TEACHER_SIGJEPA_PSEUDOCODE.md  commands.md  commands_mila.md  download_imagenet.py  main_prefetch_teacher.py  main_pretrain.py  pyproject.toml
.tmp/: imagenet100_train.pid
scripts/pretrain/imagenet-100/: rectified_lpjepa_convnext.yaml  rectified_lpjepa_imagenet.yaml  rectified_lpjepa_imagenet_mila.yaml  rectified_lpjepa_vit.yaml  sigjepa_imagenet100.yaml  sigjepa_imagenet100_mila.yaml  simclr.yaml  simclr_vit.yaml  split_teacher_sigjepa_b6_imagenet100.yaml  split_teacher_sigjepa_b6_imagenet100_mila.yaml  split_teacher_sigjepa_imagenet100.yaml  split_teacher_sigjepa_imagenet100_mila.yaml  split_teacher_sigjepa_lambda_sigreg_0p01_imagenet100.yaml  split_teacher_sigjepa_lambda_sigreg_0p01_imagenet100_mila.yaml  split_teacher_sigjepa_lambda_sigreg_0p1_imagenet100.yaml  split_teacher_sigjepa_lambda_sigreg_0p1_imagenet100_mila.yaml  split_teacher_sigjepa_lambda_teacher_0p5_imagenet100.yaml  split_teacher_sigjepa_lambda_teacher_0p5_imagenet100_mila.yaml  split_teacher_sigjepa_lambda_teacher_2p0_imagenet100.yaml  split_teacher_sigjepa_lambda_teacher_2p0_imagenet100_mila.yaml  split_teacher_sigjepa_no_sigreg_imagenet100.yaml  teacher_jepa_full_imagenet100.yaml  (+16 more)
scripts/utils/: make_imagenet100.py
solo/data/: pretrain_dataloader.py
solo/losses/: __init__.py  sigreg.py  split_teacher_sigjepa.py
solo/methods/: __init__.py  split_teacher_sigjepa.py  teacher_sigjepa_full.py
solo/utils/: __init__.py  teacher.py  teacher_prefetch.py
(+1 files in other folders)
