[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rectified-lp-jepa"
version = "0.1.0"
description = "Rectified LpJEPA: Joint-Embedding Predictive Architectures with Sparse and Maximum-Entropy Representations."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { file = "LICENSE" }
dependencies = [
  "hydra-core==1.3.2",
  "lightning==2.1.2",
  "mpmath==1.3.0",
  "numpy==2.2.3",
  "omegaconf==2.3.0",
  "pillow==11.1.0",
  "setuptools==75.8.0",
  "timm==1.0.15",
  "torch==2.6.0",
  "torchmetrics==0.11.4",
  "torchvision==0.21.0",
  "tqdm>=4.66,<5",
  "wandb==0.19.10",
]

[project.optional-dependencies]
h5 = [
  "h5py==3.13.0",
]
umap = [
  "matplotlib==3.10.1",
  "pandas==2.2.3",
  "scikit-learn==1.6.1",
  "seaborn==0.13.2",
  "umap-learn==0.5.7",
]

[tool.setuptools]
include-package-data = true
py-modules = ["main_pretrain"]

[tool.setuptools.packages.find]
include = ["solo*"]

[tool.setuptools.package-data]
"solo.data" = ["dataset_subset/*.txt"]
